# quantum-enhanced-hyperheuristics

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
results/: final_comparison.json
results/bandit_hh/: bandit_eps_greedy_seed0.json  bandit_ucb1_seed0.json  bandit_ucb1_seed1.json  bandit_ucb1_seed2.json  bandit_ucb1_seed3.json  bandit_ucb1_seed4.json  bandit_ucb1_seed5.json  bandit_ucb1_seed6.json  bandit_ucb1_seed7.json  bandit_ucb1_seed8.json  bandit_ucb1_seed9.json
results/maxcut_sweep/: sweep_seed0.json
results/operator_only/: operator_only_seed0.json  operator_only_seed1.json  operator_only_seed2.json  operator_only_seed3.json  operator_only_seed4.json  operator_only_seed5.json  operator_only_seed6.json  operator_only_seed7.json  operator_only_seed8.json  operator_only_seed9.json  summary.json
results/static_hybrid/: static_hybrid_seed0.json  static_hybrid_seed1.json  static_hybrid_seed2.json  static_hybrid_seed3.json  static_hybrid_seed4.json  static_hybrid_seed5.json  static_hybrid_seed6.json  static_hybrid_seed7.json  static_hybrid_seed8.json  static_hybrid_seed9.json  summary.json
src/qehh/: __init__.py
src/qehh/adapters/: __init__.py  repo1_operator.py
src/qehh/core/: __init__.py  instances.py  metrics.py  rng.py  schedule.py
src/qehh/experiments/: __init__.py  aggregate_operator_only.py  aggregate_static_hybrid.py  compare_methods.py  maxcut_param_sweep.py  plot_results.py  run_hh_bandit.py  (+3 more)
tests/: test_decode_apply.py  test_qaoa_operator_smoke.py  test_qubo_energy.py  test_schedule_invariants.py
(+11 files in other folders)
